vlib/v/checker/tests/globals/cast_expr_T_type_err.vv
module main

__global (
	fo = A(0)
	fo1 = &A(0)
)

fn main() {

}
